--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 
 <body>
-    <section class="container">
-        <h1>Gif Search</h1>
-        <input class="form-control" type="text" placeholder="Default input">
-        <button type="button" class="btn btn-primary">Primary</button>
-    </section>
+
+    <h1 id="title">Gif Search</h1>
+    Search <input type="text" name="FirstName" value="Search" id="searchTerm">
+    <input type="submit" value="Submit" id="search">
+    <article id="gallery">
+
+    </article>
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="assets/scripts/javascript.js"></script>
+
 </body>
 
 </html>
